--- a/Ubiquitous2/Skins/Simple/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Simple/ChatBoxSkin.xaml
@@ -18,8 +18,7 @@
                 <ControlTemplate TargetType="{x:Type UserControl}">
                     <Grid Margin="0,0,0,0">
                         <Rectangle Fill="#FF1E1E1E" Opacity="{Binding AppConfig.MessageBackgroundOpacity}"/>
-                        <Border Padding="8" Margin="-7,-2,-10,-9">
-                            
+                        <Border>              
                             <ItemsControl Focusable="False" ItemsSource="{Binding Messages}" Padding="0" Margin="0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
