--- a/Ubiquitous2/Skins/StarCitizen/MainWindowSkin.xaml
+++ b/Ubiquitous2/Skins/StarCitizen/MainWindowSkin.xaml
@@ -56,14 +56,14 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
                     <Border BorderThickness="0">
-                    	<Border.LayoutTransform>
+                    	<!--<Border.LayoutTransform>
                     		<TransformGroup>
                     			<ScaleTransform/>
                     			<SkewTransform AngleY="3"/>
                     			<RotateTransform/>
                     			<TranslateTransform/>
                     		</TransformGroup>
-                    	</Border.LayoutTransform>
+                    	</Border.LayoutTransform>-->
                         <Grid Margin="0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="15" />
@@ -130,10 +130,13 @@
 												</TextBlock>
                                             </DockPanel>
                                         </Border>
-                                        <View:ChatBoxView Focusable="False" Grid.Row="1" Margin="0,4,0,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0">
-                                            <!--<MouseBinding Gesture="LeftClick" Command="{Binding ShowOverlay}"/>-->
-                                        </View:ChatBoxView>
-                                        <Border CornerRadius="0,0,10,10" Focusable="False" Grid.Row="2" Padding="24,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" BorderBrush="#FF1E1E1E" BorderThickness="1" Margin="0" Height="36">
+                                        <Border Grid.Row="1" Margin="0" Padding="0">
+                                            <View:ChatBoxView Focusable="False" Grid.Row="1" Margin="0,4,0,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0"/>
+                                        </Border>
+
+                                        <!--<MouseBinding Gesture="LeftClick" Command="{Binding ShowOverlay}"/>-->
+
+                                            <Border CornerRadius="0,0,10,10" Focusable="False" Grid.Row="2" Padding="24,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" BorderBrush="#FF1E1E1E" BorderThickness="1" Margin="0" Height="36">
                                             <DockPanel Focusable="False" VerticalAlignment="Bottom" Background="Transparent" Margin="0">
                                                 <ComboBox Focusable="False" Style="{DynamicResource ReplyComboStyle}" Name="replyCombo" ItemsSource="{Binding ChannelList}" SelectedItem="{Binding SelectedChatChannel}" ItemTemplate="{DynamicResource ReplyComboTemplate}" IsReadOnly="True" IsEditable="False" Margin="-18,1,61,6" VerticalAlignment="Stretch"/>
                                                 <Border Focusable="False" CornerRadius="7" Background="#FF303030" Padding="6,0" Margin="-55,-24,1,-19" Height="22">
