--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -64,10 +64,10 @@
                                 </Image>
                                 <TextBlock ToolTip="Click to set as active channel" Focusable="False" VerticalAlignment="Center" Margin="5,0,0,1" Padding="0">
                                     <Hyperlink Focusable="False" Command="{Binding SetActiveChannel}" Cursor="Hand">
-                                        <TextBlock Focusable="False" FontSize="11" Text="{Binding Message.Channel}" Margin="0,0,0,0" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                        <TextBlock Focusable="False" FontSize="{Binding AppConfig.FontSizeChannel}" Text="{Binding Message.Channel}" Margin="0,0,0,0" HorizontalAlignment="Left" FontWeight="Bold"/>
                                     </Hyperlink>
                                 </TextBlock>
-                                <TextBlock ToolTip="Right click for options" Cursor="Hand" Focusable="False" FontSize="11" Text="{Binding Message.FromUserName}" Margin="5,0,0,0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold" VerticalAlignment="Center" Padding="0">
+                            <TextBlock ToolTip="Right click for options" Cursor="Hand" Focusable="False" FontSize="{Binding AppConfig.FontSizeNickName}" Text="{Binding Message.FromUserName}" Margin="5,0,0,0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold" VerticalAlignment="Center" Padding="0">
                                     <TextBlock.ContextMenu>
                                         <ContextMenu Name="userNameMenu" Style="{DynamicResource ContextMenuStyle}">
                                             <MenuItem Header="Add to ignore list" Command="{Binding IgnoreUser}" CommandParameter="{Binding Message}" Foreground="#FFFFC042" VerticalAlignment="Center">
@@ -79,13 +79,13 @@
                                     </TextBlock.ContextMenu>
                                 </TextBlock>
 
-                                <TextBlock DockPanel.Dock="Right" Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="11" Foreground="#FFD69B33" TextAlignment="Right" Margin="0,0,8,0" FontWeight="Bold" Padding="0" VerticalAlignment="Center"/>
+                            <TextBlock DockPanel.Dock="Right" Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="{Binding AppConfig.FontSizeTimestamp}" Foreground="#FFD69B33" TextAlignment="Right" Margin="0,0,8,0" FontWeight="Bold" Padding="0" VerticalAlignment="Center"/>
                             </DockPanel>
                             <Border Panel.ZIndex="-1" Focusable="False" Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="0,0,10,10" BorderThickness="4,0,4,4" Padding="2,1" Margin="0,0,0,2" BorderBrush="#FF444444">
                                 <Border.Background>
                                     <SolidColorBrush Opacity="{Binding AppConfig.IndividualMessageBackgroundOpacity}" Color="#303030"/>
                                 </Border.Background>
-                            <TextBlock TextOptions.TextFormattingMode="Display" Focusable="False" TextAlignment="Left" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="16" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}" FontFamily="Calibri" TextOptions.TextHintingMode="Fixed" FontWeight="Normal"/>
+                            <TextBlock TextOptions.TextFormattingMode="Display" Focusable="False" TextAlignment="Left" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="{Binding AppConfig.FontSizeMessage}" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}" FontFamily="Calibri" TextOptions.TextHintingMode="Fixed" FontWeight="Normal"/>
                         </Border>                            
                         </Grid>
                 </ControlTemplate>
