--- a/Ubiquitous2/Skins/StarCitizen/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/StarCitizen/ChatMessageSkin.xaml
@@ -61,10 +61,10 @@
                                 </Image>
                                 <TextBlock ToolTip="Click to set as active channel" Focusable="False" VerticalAlignment="Center" Margin="0,0,5,0" HorizontalAlignment="Left">
                                     <Hyperlink Focusable="False" Command="{Binding SetActiveChannel}" Cursor="Hand">
-                                        <TextBlock Focusable="False" FontSize="12" Text="{Binding Message.Channel}" Margin="0" HorizontalAlignment="Left" FontWeight="Bold" VerticalAlignment="Center" Foreground="#FFF7941D" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" TextOptions.TextHintingMode="Fixed"/>
+                                        <TextBlock Focusable="False" FontSize="{Binding AppConfig.FontSizeChannel}" Text="{Binding Message.Channel}" Margin="0" HorizontalAlignment="Left" FontWeight="Bold" VerticalAlignment="Center" Foreground="#FFF7941D" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" TextOptions.TextHintingMode="Fixed"/>
                                     </Hyperlink>
                                 </TextBlock>
-                                <TextBlock ToolTip="Right click for options" Cursor="Hand" Focusable="False" FontSize="12" Text="{Binding Message.FromUserName}" Margin="0,0,5,0" Foreground="#FFF7941D" HorizontalAlignment="Left" FontWeight="Bold" OverridesDefaultStyle="False" VerticalAlignment="Center" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" TextOptions.TextHintingMode="Fixed">
+                                <TextBlock ToolTip="Right click for options" Cursor="Hand" Focusable="False" FontSize="{Binding AppConfig.FontSizeNickName}" Text="{Binding Message.FromUserName}" Margin="0,0,5,0" Foreground="#FFF7941D" HorizontalAlignment="Left" FontWeight="Bold" OverridesDefaultStyle="False" VerticalAlignment="Center" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" TextOptions.TextHintingMode="Fixed">
                                     <TextBlock.ContextMenu>
                                         <ContextMenu Name="userNameMenu" Style="{DynamicResource ContextMenuStyle}">
                                             <MenuItem Header="Add to ignore list" Command="{Binding IgnoreUser}"  CommandParameter="{Binding Message}" Foreground="#FFFFC042" VerticalContentAlignment="Center" VerticalAlignment="Center">
@@ -81,9 +81,9 @@
                                     </i:Interaction.Triggers>-->
                                 </TextBlock>
                             </StackPanel>
-                            <TextBlock Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="12" Foreground="#FFF7941D" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,3,0,0" FontWeight="Bold" VerticalAlignment="Center" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" Height="15" TextOptions.TextHintingMode="Fixed"/>
+                            <TextBlock Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="{Binding AppConfig.FontSizeTimestamp}" Foreground="#FFF7941D" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,3,0,0" FontWeight="Bold" VerticalAlignment="Center" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize" Height="15" TextOptions.TextHintingMode="Fixed"/>
                         </DockPanel>
-                        <TextBlock Grid.Row="1" Focusable="False" TextAlignment="Left" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FF4AD3C6" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize">
+                        <TextBlock Grid.Row="1" Focusable="False" TextAlignment="Left" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="{Binding AppConfig.FontSizeMessage}" Foreground="#FF4AD3C6" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}" FontFamily="/Ubiquitous2;component/Fonts/#Electrolize">
                             <TextBlock.Background>
                                 <SolidColorBrush Opacity="{Binding AppConfig.IndividualMessageBackgroundOpacity}">
                                 </SolidColorBrush>
